syntax="proto3";

import "common.proto";

option java_package = "br.com.finsavior.grpc.tables";
option java_multiple_files = true;

message BillRegisterResponse {
  string status = 1;
  BillRegisterRequest message = 2;
}

message BillRegisterRequest {
  int64 userId = 1;
  string billType = 2;
  string billDate = 3;
  string billName = 4;
  double billValue = 5;
  string billDescription = 6;
  string billTable = 7;
  bool isRecurrent = 8;
  bool isPaid = 9;
}

message MainTableDataRequest {
  int64 userId = 1;
  string billDate = 2;
}

message MainTableDataResponse {
  repeated MainTableData mainTableData = 1;
}

message MainTableData {
  int64 id = 1;
  string billType = 2;
  string billDate = 3;
  string billName = 4;
  double billValue = 5;
  string billDescription = 6;
  bool isPaid = 7;
}

message CardTableDataRequest {
  int64 userId = 1;
  string billDate = 2;
}

message CardTableDataResponse {
  repeated CardTableData cardTableData = 1;
}

message CardTableData {
  int64 id = 1;
  string billDate = 2;
  string billName = 3;
  double billValue = 4;
  string billDescription = 5;
}

message DeleteItemFromTableRequest {
  int64 id = 1;
}

message BillUpdateRequest {
  int64 id = 1;
  BillRegisterRequest bill = 2;
}

service TableDataService {
  rpc billRegister(BillRegisterRequest) returns (BillRegisterResponse);
  rpc loadMainTableData(MainTableDataRequest) returns (MainTableDataResponse);
  rpc loadCardTableData(CardTableDataRequest) returns (CardTableDataResponse);
  rpc deleteItemFromMainTable(DeleteItemFromTableRequest) returns (GenericResponse);
  rpc deleteItemFromCardTable(DeleteItemFromTableRequest) returns (GenericResponse);
  rpc editItemFromMainTable(BillUpdateRequest) returns (GenericResponse);
  rpc editItemFromCardTable(BillUpdateRequest) returns (GenericResponse);
}